Fix mobile menu on smaller desktop view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,7 +41,7 @@
   --spacing-body-mobile: 1.563rem; /* 25px */
   --spacing-body-desktop: 2.188rem; /* 25px */
   --spacing-header-mobile: 80px;
-  --spacing-header-desktop: 110px;
+  --spacing-header-desktop: 91px;
 
   --animate-slide-in-from-right: slide-in-from-right 0.35s ease-out;
   --animate-slide-in-from-left: slide-in-from-left 0.35s ease-out;
